# Stripe-Subscription-Overage-PoC

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: business-decisions.md  implementation-guide.md
src/streaming_billing/: __init__.py  catalog.py  checkout.py  cli.py  config.py  pricing.py  product_config.py  state.py  stripe_utils.py  usage.py  validation.py  web.py  webhooks.py
src/streaming_billing/static/: styles.css
src/streaming_billing/templates/: index.html  success.html
tests/: test_billing_portal_backend.py  test_catalog_and_checkout.py  test_cli_demo.py  test_pricing_and_config.py  test_usage.py  test_webhook_event_model.py  test_webhooks_and_requests.py
